styling video list

--- a/packages/yt-videos/locales/en.i18n.json
+++ b/packages/yt-videos/locales/en.i18n.json
@@ -1,3 +1,4 @@
 {
-	"how_to": "How to pronounce '%s' in English (%s out of %s):"	
+	"how_to": "How to pronounce '%s' in English (%s out of %s):",
+	"no_results": "No results found."
 }
