examples and footer

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -2,5 +2,8 @@
 	"title": "How to pronounce it?",
 	"desc": "Use YouTube to improve your English pronunciation. Real people, real situations, easy and fun to use.",
 	"placeholder": "Enter a word or a phrase...",
-	"search": "Say it!"
+	"search": "Say it!",
+	"about": "About",
+	"donate": "Donate",
+	"see_examples": "For example: "
 }
