--- a/packages/yt-videos/locales/en.i18n.json
+++ b/packages/yt-videos/locales/en.i18n.json
@@ -1,5 +1,7 @@
 {
 	"how_to": "How to pronounce '%s' in English (%s out of %s):",
 	"no_results": "No results found.",
-	"share": "Share this video: "
+	"share": "Share this video: ",
+	"replay": "replay",
+	"report": "report"
 }
