--- a/packages/yt-report/locales/en.i18n.json
+++ b/packages/yt-report/locales/en.i18n.json
@@ -7,5 +7,6 @@
 	"issue_sound" : "Poor sound quality.",
 	"issue_video" : "Poor video quality.",
 	"issue_does_not_work": "Video does not work",
-	"issue_shocking" : "Crude/shocking content."
+	"issue_shocking" : "Crude/shocking content.",
+	"bot_verification": "Confirm that you are not a robot"
 }
