--- a/packages/yt-report/locales/en.i18n.json
+++ b/packages/yt-report/locales/en.i18n.json
@@ -8,5 +8,7 @@
 	"issue_video" : "Poor video quality.",
 	"issue_does_not_work": "Video does not work",
 	"issue_shocking" : "Crude/shocking content.",
-	"bot_verification": "Confirm that you are not a robot"
+	"bot_verification": "Confirm that you are not a robot",
+	"wrong_captcha": "Wrong captcha.",
+	"thanks_contribution": "Thank you for your contribution"
 }
