similar words without accents

--- a/packages/yt-videos/locales/en.i18n.json
+++ b/packages/yt-videos/locales/en.i18n.json
@@ -3,5 +3,6 @@
 	"no_results": "No results found.",
 	"share": "Share this video: ",
 	"replay": "replay",
-	"report": "report"
+	"report": "report",
+	"may_check": "You may want to check:"
 }
