use phrases, none lang index, highlight words

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -1,6 +1,6 @@
 {
 	"title": "How to pronounce it?",
-	"desc": "Use YouTube to improve your English pronunciation. Real people, real situations, easy and fun to use.",
+	"desc": "Use YouTube to improve your French pronunciation. Real people, real situations, easy and fun to use.",
 	"placeholder": "Enter a word or a phrase...",
 	"search": "Say it!",
 	"about": "About",
