--- a/packages/yt-report/locales/en.i18n.json
+++ b/packages/yt-report/locales/en.i18n.json
@@ -2,12 +2,12 @@
 	"what_issue": "What is the issue?",
 	"send": "Send",
 	"comment": "Optional comment",
-	"issue_not_lang": "This is not english",
+	"issue_not_lang": "The video is not in french.",
 	"issue_captions" : "Captions are inaccurate.",
 	"issue_sound" : "Poor sound quality.",
 	"issue_video" : "Poor video quality.",
 	"issue_does_not_work": "Video does not work",
-	"issue_shocking" : "Crude/shocking content.",
+	"issue_shocking" : "Shocking content.",
 	"bot_verification": "Confirm that you are not a robot",
 	"wrong_captcha": "Wrong captcha.",
 	"thanks_contribution": "Thank you for your contribution"
