--- a/packages/yt-videos/locales/fr.i18n.json
+++ b/packages/yt-videos/locales/fr.i18n.json
@@ -1,3 +1,8 @@
 {
-	
+	"how_to": "Comment '%s' se prononce en français (%s sur %s):",
+	"no_results": "Aucun résultat trouvé.",
+	"share": "Partagez ce vidéo: ",
+	"replay": "rejoue",
+	"report": "rapporte",
+	"may_check": "Vous pouvez voir:"
 }
