--- a/i18n/fr.i18n.json
+++ b/i18n/fr.i18n.json
@@ -3,7 +3,7 @@
 	"desc": "Utilisez YouTube pour améliorer votre l'accent français. De vraies personnes, des situations réelles, facile et amusant à utiliser. C'est chic!",
 	"placeholder": "Entrez un mot ou une phrase...",
 	"search": "Dis ça!",
-	"about": "About",
+	"about": "À Propos",
 	"donate": "Donate",
 	"see_examples": "Par example: ",
 	"404_not_found": "La page n'est pas trouvée. ",
@@ -23,5 +23,12 @@
 			"title": "Comment \"__word__\" se prononce en français ?",
 			"desc": "Vérifiez comment \"__word__\" se prononce en français. La prononciation de mot \"__word__\" et les autres. Utilisez youtube pour apprendre la pronnonciation française, c'est gratuit"
 		}
+	},
+	"home": "Home",
+	"aboutpage": {
+		"title": "À Propos",
+		"p1": "Gratuit et facile façon pour vérifier comment des mots, noms et phrases français se prononcent. Dans ce moment, nous soutenons plus de 40k mots différents, mais ça améliore tout le temps. Veuillez garder à l'esprit que c'est la version bêta et il y a encore beaucoup de vidéos et de sous-titres qui sont fausses, si vous en trouvez, vous pourriez utiliser la fonction de rapport. ",
+		"p2": "Si vous voulez nous contacter, vous pouvez envoyer un e-mail à: ",
+		"p3": "Si vous voulez contribuer, s'il vous plaît cliquez sur le signe de café dans le coin en bas à droite pour obtenir plus de détails."
 	}
 }
