--- a/packages/yt-videos/locales/fr.i18n.json
+++ b/packages/yt-videos/locales/fr.i18n.json
@@ -1,8 +1,8 @@
 {
 	"how_to": "Comment '%s' se prononce en français (%s sur %s):",
 	"no_results": "Aucun résultat trouvé.",
-	"share": "Partagez ce vidéo: ",
-	"replay": "rejoue",
-	"report": "rapporte",
-	"may_check": "Vous pouvez voir:"
+	"share": "Partagez cette vidéo: ",
+	"replay": "rejouer",
+	"report": "signaler",
+	"may_check": "Vous voulez dire:"
 }
