new donate button

--- a/i18n/fr.i18n.json
+++ b/i18n/fr.i18n.json
@@ -1,5 +1,5 @@
 {
-	"title": "ça se prononce comment ?",
+	"title": "Comment ça se prononce ?",
 	"desc": "Utilisez YouTube pour améliorer votre l'accent français. De vraies personnes, des situations réelles, facile et amusant à utiliser. C'est chic!",
 	"placeholder": "Entrez un mot ou une phrase...",
 	"search": "Dis ça!",
